Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3036

Interop 1.8.9<->2.4 Failure on test suite sanityn test_23: atime doesn't update among nodes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0, Lustre 1.8.9
    • Lustre 2.4.0
    • None
    • client: 1.8.9
      server: lustre-master build #1338
    • 3
    • 7407

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/25418d26-948b-11e2-93c6-52540035b04c.

      The sub-test test_23 failed with the following error:

      test_23 failed with 1

      Info required for matching: sanityn 23

            emoly.liu Emoly Liu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: